--- a/ProyectoDesarrollo/src/Vista/Administrador/PanelCrearCoordinador.form
+++ b/ProyectoDesarrollo/src/Vista/Administrador/PanelCrearCoordinador.form
@@ -140,7 +140,7 @@
                       <Component id="jLabelTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButtonGuardarCoordinador" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
