--- a/ProyectoDesarrollo/src/Vista/Administrador/PanelCrearMasterTeacher.form
+++ b/ProyectoDesarrollo/src/Vista/Administrador/PanelCrearMasterTeacher.form
@@ -142,7 +142,7 @@
                       </Group>
                       <Component id="jComboBoxIdCurso" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="39" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButtonGuardarMT" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
