--- a/ProyectoDesarrollo/src/Vista/PanelAspirante.form
+++ b/ProyectoDesarrollo/src/Vista/PanelAspirante.form
@@ -481,8 +481,14 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Lenguaje (Lenguaje Castellana, Idiomas Extranjeros, Humaniades)"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="radioButtonArea3ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="inputAreaOtro">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JRadioButton" name="radioButtonArea4">
               <Properties>
@@ -494,6 +500,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Otro: "/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="radioButtonArea4ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="radioButtonPTANo">
               <Properties>
