--- a/ProyectoDesarrollo/src/Reporte/ReportEstNotas.jrxml
+++ b/ProyectoDesarrollo/src/Reporte/ReportEstNotas.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6ccde8af-788a-4fdf-9818-786465d80057">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6ccde8af-788a-4fdf-9818-786465d80057">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -29,7 +29,7 @@ NATURAL JOIN (SELECT id_practica, nota, cedula_lt FROM tarea WHERE cedula_lt = $
 		<groupExpression><![CDATA[$F{nombre_curso}]]></groupExpression>
 		<groupHeader>
 			<band height="40">
-				<textField>
+				<textField isBlankWhenNull="true">
 					<reportElement uuid="8fd11d25-85d7-4963-a632-b1caaeab8c83" style="SubTitle" x="209" y="8" width="224" height="24" forecolor="#CC0000"/>
 					<textElement>
 						<font isBold="true"/>
@@ -56,7 +56,7 @@ NATURAL JOIN (SELECT id_practica, nota, cedula_lt FROM tarea WHERE cedula_lt = $
 		<groupExpression><![CDATA[$F{id_fase}]]></groupExpression>
 		<groupHeader>
 			<band height="30">
-				<textField>
+				<textField isBlankWhenNull="true">
 					<reportElement uuid="5dd46651-7249-4f24-9bb2-0483916a42e1" style="SubTitle" x="109" y="5" width="305" height="20"/>
 					<textElement>
 						<font size="16" isBold="true"/>
@@ -94,7 +94,7 @@ NATURAL JOIN (SELECT id_practica, nota, cedula_lt FROM tarea WHERE cedula_lt = $
 				<textElement/>
 				<text><![CDATA[Nota Final]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="8d559485-2161-47fa-837e-d346107b7c40" style="Detail" x="100" y="75" width="97" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nota_final}]]></textFieldExpression>
@@ -104,7 +104,7 @@ NATURAL JOIN (SELECT id_practica, nota, cedula_lt FROM tarea WHERE cedula_lt = $
 				<textElement/>
 				<text><![CDATA[Cedula]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="37e549cf-cbc0-4480-80c8-fe38786d2f1a" style="Detail" x="100" y="38" width="97" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{cedula_lt}]]></textFieldExpression>
@@ -144,17 +144,17 @@ NATURAL JOIN (SELECT id_practica, nota, cedula_lt FROM tarea WHERE cedula_lt = $
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="40eb72e5-c522-4c86-b450-99ec9e83aaea" style="Detail" x="258" y="1" width="79" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{id_practica}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="7fdc8f79-09ca-4d11-86bd-9e44de263622" style="Detail" x="353" y="1" width="122" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nombre_practica}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="317915f2-b365-40a3-88a1-df862dc79dbb" style="Detail" x="494" y="1" width="61" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nota_tarea}]]></textFieldExpression>
