--- a/ProyectoDesarrollo/src/Reporte/ReporteNotaLT.jrxml
+++ b/ProyectoDesarrollo/src/Reporte/ReporteNotaLT.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="f7cc5bfc-baf8-4074-a804-39988f7f92ec">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="39"/>
+	<property name="ireport.y" value="0"/>
 	<style name="Title" fontName="Serif" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Serif" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="Serif" fontSize="12" isBold="true"/>
@@ -38,7 +38,7 @@ FROM cohorte NATURAL JOIN (SELECT id_cohorte, nota_final, id_curso, nombre_curso
 		<groupExpression><![CDATA[$F{id_fase}]]></groupExpression>
 		<groupHeader>
 			<band height="40">
-				<textField>
+				<textField isBlankWhenNull="true">
 					<reportElement uuid="408033b8-ef26-4e16-a757-2683bc51e444" style="SubTitle" x="183" y="13" width="250" height="24" forecolor="#CC0000"/>
 					<textElement>
 						<font isBold="true"/>
@@ -82,7 +82,7 @@ FROM cohorte NATURAL JOIN (SELECT id_cohorte, nota_final, id_curso, nombre_curso
 				<textElement/>
 				<text><![CDATA[Nota Final: ]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="4fa263df-d446-422e-beea-b48f1717ac59" style="Detail" x="142" y="126" width="118" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nota_final}]]></textFieldExpression>
@@ -97,12 +97,12 @@ FROM cohorte NATURAL JOIN (SELECT id_cohorte, nota_final, id_curso, nombre_curso
 				<textElement/>
 				<text><![CDATA[Codigo Curso: ]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="5b48c2ce-fc98-4fdf-bb50-846f41214ea4" style="Detail" x="142" y="52" width="118" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{id_curso}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="997839ad-1801-4776-af5c-abf7fe6bfe6c" style="Detail" x="142" y="94" width="118" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nombre_curso}]]></textFieldExpression>
@@ -112,7 +112,7 @@ FROM cohorte NATURAL JOIN (SELECT id_cohorte, nota_final, id_curso, nombre_curso
 				<textElement/>
 				<text><![CDATA[Cedula:]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="f3c36510-4125-48a0-b4a1-50de7d6764ee" style="Detail" x="84" y="11" width="176" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{cedula_lt}]]></textFieldExpression>
@@ -152,17 +152,17 @@ FROM cohorte NATURAL JOIN (SELECT id_cohorte, nota_final, id_curso, nombre_curso
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="e38067f0-3a5a-4b79-8d4a-681eda7d7b98" style="Detail" x="214" y="1" width="83" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{id_practica}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="bb4e40f6-302a-4826-a5dd-3badbc8d3808" style="Detail" x="330" y="0" width="127" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nombre_practica}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement uuid="a37224fe-1127-43cb-9ce7-788446b6978b" style="Detail" x="495" y="0" width="55" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{nota_tarea}]]></textFieldExpression>
